fix: post avatar alignment and size (#214)
* fix: post avatar alignment and size

* refactor: post header scss class

--- a/src/index.scss
+++ b/src/index.scss
@@ -88,3 +88,18 @@ $fa-font-path: "~font-awesome/fonts";
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+.question-icon-size {
+  width: 1.625rem;
+  height: 1.625rem;
+}
+
+.question-icon-position {
+  top: 12px;
+  left: 14px;
+}
+
+.avarat-img-position {
+margin-top: 17px;
+margin-left: 17px;
+}
